[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqe_fitting"
version = "0.1.0"
description = "lmfit-based fitting codes for superconducting qubit experiments."
authors = [{name = "tama-sh", email = "tama.csh@gmail.com"}]
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "lmfit"
]
